:bug: correct the view on mobile #36

--- a/src/assets/scss/game/game.scss
+++ b/src/assets/scss/game/game.scss
@@ -27,6 +27,8 @@
 		li {
 			list-style: none;
 			padding: 0.5rem 1rem;
+			min-width: 7rem;
+			max-width: 7rem;
 			
 			span {
 				padding: .2rem .5rem;
