--- a/src/dashboards/jagfx/assets/scss/common/mixins/_mixins-truck-brand.scss
+++ b/src/dashboards/jagfx/assets/scss/common/mixins/_mixins-truck-brand.scss
@@ -14,7 +14,7 @@
 		opacity: 0.1;
 		width: 25vw;
 		height: 27vh;
-		left: 37.5vw;
+		left: 38vw;
 		z-index: 0;
 		background-size: contain;
 	}
