--- a/src/dashboards/jagfx/assets/scss/jagfx.scss
+++ b/src/dashboards/jagfx/assets/scss/jagfx.scss
@@ -21,4 +21,14 @@
 		@include brandTruckBackground('mercedes');
 		@include brandTruckBackground('renault');
 	}
+	
+	.dashboard {
+		position: absolute;
+		transform-origin: top left;
+		left: 50%;
+		top: 50%;
+		@include prefixer(display, flex, ("webkit", "moz", "o"));
+		@include prefixer(justify-content, center, ("webkit", "moz", "o"));
+		@include prefixer(align-items, center, ("webkit", "moz", "o"));
+	}
 }
